fixed: OC: DN buttons unreadable in IE11 and too tall in all browsers, closes #1080

--- a/app/views/styles/component/_common-oc.scss
+++ b/app/views/styles/component/_common-oc.scss
@@ -102,6 +102,9 @@ $secondary-color: #eeeeee;
                 // so responsiveness can be broken.
                 width: 80%;
             }
+            &__query-btns {
+                min-width: 200px;
+            }
         }
     }
 }
